feat: 完善动作权限与数据范围闭环