@@ -5,16 +5,23 @@ import net.ximatai.muyun.database.core.orm.PageRequest;
 import net.ximatai.muyun.database.core.orm.PageResult;
 import net.ximatai.muyun.database.core.orm.Sort;
 import net.ximatai.muyun.spring.ability.TransactionScopeSupport;
+import net.ximatai.muyun.spring.ability.TreeAbility;
 import net.ximatai.muyun.spring.ability.event.RuntimeMutationSource;
 import net.ximatai.muyun.spring.ability.reference.ReferenceOption;
+import net.ximatai.muyun.spring.common.exception.PlatformException;
 import net.ximatai.muyun.spring.common.identity.CurrentUserContext;
+import net.ximatai.muyun.spring.common.platform.ActionAccessMode;
 import net.ximatai.muyun.spring.common.platform.ActionExecutionContext;
+import net.ximatai.muyun.spring.common.platform.ActionExecutionPolicy;
 import net.ximatai.muyun.spring.common.platform.ActionExecutionPolicyService;
+import net.ximatai.muyun.spring.common.platform.ActionDefaultPolicy;
 import net.ximatai.muyun.spring.common.platform.AllowAllActionExecutionPolicyService;
 import net.ximatai.muyun.spring.common.platform.AllowAllDataScopeCriteriaService;
 import net.ximatai.muyun.spring.common.platform.DataScopeCriteriaResult;
 import net.ximatai.muyun.spring.common.platform.DataScopeCriteriaService;
+import net.ximatai.muyun.spring.common.platform.EntityCapability;
 import net.ximatai.muyun.spring.common.platform.PlatformAction;
+import net.ximatai.muyun.spring.common.platform.PlatformActionLevel;
 import net.ximatai.muyun.spring.common.tenant.TenantContext;
 import net.ximatai.muyun.spring.dynamic.descriptor.DynamicActionDescriptor;
 import net.ximatai.muyun.spring.dynamic.descriptor.DynamicAssociationViewDescriptor;
@@ -29,6 +36,7 @@ import net.ximatai.muyun.spring.dynamic.metadata.ModuleDefinitionException;
 import net.ximatai.muyun.spring.dynamic.openapi.DynamicOpenApiDocument;
 import net.ximatai.muyun.spring.dynamic.openapi.DynamicOpenApiGenerator;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -36,6 +44,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
+import java.util.function.Supplier;
 
 public class DynamicRecordService {
     private static final DynamicOpenApiGenerator OPEN_API_GENERATOR = new DynamicOpenApiGenerator();
@@ -196,6 +205,14 @@ public class DynamicRecordService {
     }
 
     private String create(String moduleAlias, String entityAlias, DynamicRecord record, RuntimeMutationSource mutationSource, String traceId) {
+        if (mutationSource == RuntimeMutationSource.BUSINESS) {
+            actionExecutionPolicyService.requireAuthorized(ActionExecutionContext.ofPlatformAction(
+                    moduleAlias,
+                    PlatformAction.CREATE,
+                    Set.of(),
+                    CurrentUserContext.currentUser()
+            ));
+        }
         String id = entityService(moduleAlias, entityAlias).insert(record);
         eventPublisher.created(eventContext(moduleAlias, entityAlias, mutationSource, traceId), id);
         return id;
@@ -204,11 +221,13 @@ public class DynamicRecordService {
     public DynamicRecord select(String moduleAlias, String entityAlias, String id) {
         Criteria base = Criteria.of().eq("id", id);
         DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.VIEW.code(), base);
-        if (!scope.restricted()) {
-            return entityService(moduleAlias, entityAlias).select(id);
-        }
-        boolean visible = !entityService(moduleAlias, entityAlias).list(scope.criteria(), new PageRequest(0, 1)).isEmpty();
-        return visible ? entityService(moduleAlias, entityAlias).select(id) : null;
+        return withTenantScope(scope, () -> {
+            if (!scope.restricted()) {
+                return entityService(moduleAlias, entityAlias).select(id);
+            }
+            boolean visible = !entityService(moduleAlias, entityAlias).list(scope.criteria(), new PageRequest(0, 1)).isEmpty();
+            return visible ? entityService(moduleAlias, entityAlias).select(id) : null;
+        });
     }
 
     public DynamicRecord selectIgnoreSoftDelete(String moduleAlias, String entityAlias, String id) {
@@ -224,7 +243,12 @@ public class DynamicRecordService {
     }
 
     private int update(String moduleAlias, String entityAlias, DynamicRecord record, RuntimeMutationSource mutationSource, String traceId) {
-        int updated = entityService(moduleAlias, entityAlias).update(record);
+        DataScopeCriteriaResult mutationScope = DataScopeCriteriaResult.unrestricted(Criteria.of());
+        if (mutationSource == RuntimeMutationSource.BUSINESS) {
+            Set<String> recordIds = normalizeRecordId(record == null ? null : record.getId());
+            mutationScope = requireBusinessRecordMutation(moduleAlias, entityAlias, PlatformAction.UPDATE, recordIds);
+        }
+        int updated = withTenantScope(mutationScope, () -> entityService(moduleAlias, entityAlias).update(record));
         if (updated > 0) {
             eventPublisher.updated(eventContext(moduleAlias, entityAlias, mutationSource, traceId), record.getId());
         }
@@ -240,7 +264,12 @@ public class DynamicRecordService {
     }
 
     private int delete(String moduleAlias, String entityAlias, String id, RuntimeMutationSource mutationSource, String traceId) {
-        int deleted = entityService(moduleAlias, entityAlias).delete(id);
+        DataScopeCriteriaResult mutationScope = DataScopeCriteriaResult.unrestricted(Criteria.of());
+        if (mutationSource == RuntimeMutationSource.BUSINESS) {
+            Set<String> recordIds = normalizeRecordId(id);
+            mutationScope = requireBusinessRecordMutation(moduleAlias, entityAlias, PlatformAction.DELETE, recordIds);
+        }
+        int deleted = withTenantScope(mutationScope, () -> entityService(moduleAlias, entityAlias).delete(id));
         if (deleted > 0) {
             eventPublisher.deleted(eventContext(moduleAlias, entityAlias, mutationSource, traceId), id);
         }
@@ -252,7 +281,12 @@ public class DynamicRecordService {
     }
 
     private int deleteBatch(String moduleAlias, String entityAlias, Collection<String> ids, RuntimeMutationSource mutationSource, String traceId) {
-        int deleted = entityService(moduleAlias, entityAlias).deleteBatch(ids);
+        DataScopeCriteriaResult mutationScope = DataScopeCriteriaResult.unrestricted(Criteria.of());
+        if (mutationSource == RuntimeMutationSource.BUSINESS) {
+            Set<String> normalized = normalizeRecordIds(ids);
+            mutationScope = requireBusinessRecordMutation(moduleAlias, entityAlias, PlatformAction.DELETE, normalized);
+        }
+        int deleted = withTenantScope(mutationScope, () -> entityService(moduleAlias, entityAlias).deleteBatch(ids));
         if (deleted > 0) {
             eventPublisher.deletedBatch(eventContext(moduleAlias, entityAlias, mutationSource, traceId),
                     List.copyOf(ids), deleted);
@@ -261,21 +295,25 @@ public class DynamicRecordService {
     }
 
     public List<DynamicRecord> list(String moduleAlias, String entityAlias, Criteria criteria, PageRequest pageRequest, Sort... sorts) {
-        return entityService(moduleAlias, entityAlias).list(readScopeCriteria(moduleAlias, PlatformAction.QUERY.code(), criteria),
-                pageRequest, sorts);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.QUERY, criteria);
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).list(scope.criteria(),
+                pageRequest, sorts));
     }
 
     public PageResult<DynamicRecord> page(String moduleAlias, String entityAlias, Criteria criteria, PageRequest pageRequest, Sort... sorts) {
-        return entityService(moduleAlias, entityAlias).pageQuery(readScopeCriteria(moduleAlias, PlatformAction.QUERY.code(), criteria),
-                pageRequest, sorts);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.QUERY, criteria);
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).pageQuery(scope.criteria(),
+                pageRequest, sorts));
     }
 
     public long count(String moduleAlias, String entityAlias, Criteria criteria) {
-        return entityService(moduleAlias, entityAlias).count(readScopeCriteria(moduleAlias, PlatformAction.QUERY.code(), criteria));
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.QUERY, criteria);
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).count(scope.criteria()));
     }
 
     public List<DynamicRecord> sortedList(String moduleAlias, String entityAlias, Criteria criteria) {
-        return entityService(moduleAlias, entityAlias).sortedList(readScopeCriteria(moduleAlias, PlatformAction.QUERY.code(), criteria));
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.QUERY, criteria);
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).sortedList(scope.criteria()));
     }
 
     public void reorder(String moduleAlias, String entityAlias, List<String> orderedIds) {
@@ -287,7 +325,15 @@ public class DynamicRecordService {
     }
 
     private void reorder(String moduleAlias, String entityAlias, List<String> orderedIds, RuntimeMutationSource mutationSource, String traceId) {
-        entityService(moduleAlias, entityAlias).reorder(orderedIds);
+        DataScopeCriteriaResult mutationScope = DataScopeCriteriaResult.unrestricted(Criteria.of());
+        if (requiresStandardSortScopeCheck(mutationSource)) {
+            mutationScope = sortMutationScope(moduleAlias, entityAlias, normalizeRecordIds(orderedIds),
+                    ignored -> normalizeRecordIds(orderedIds));
+        }
+        withTenantScope(mutationScope, () -> {
+            entityService(moduleAlias, entityAlias).reorder(orderedIds);
+            return null;
+        });
         eventPublisher.reordered(eventContext(moduleAlias, entityAlias, mutationSource, traceId), orderedIds);
     }
 
@@ -300,7 +346,15 @@ public class DynamicRecordService {
     }
 
     private void moveBefore(String moduleAlias, String entityAlias, String id, String beforeId, RuntimeMutationSource mutationSource, String traceId) {
-        entityService(moduleAlias, entityAlias).moveBefore(id, beforeId);
+        DataScopeCriteriaResult mutationScope = DataScopeCriteriaResult.unrestricted(Criteria.of());
+        if (requiresStandardSortScopeCheck(mutationSource)) {
+            mutationScope = sortMutationScope(moduleAlias, entityAlias, normalizeRecordIds(Arrays.asList(id, beforeId)),
+                    scope -> sortScopeRecordIds(moduleAlias, entityAlias, id, beforeId));
+        }
+        withTenantScope(mutationScope, () -> {
+            entityService(moduleAlias, entityAlias).moveBefore(id, beforeId);
+            return null;
+        });
         eventPublisher.movedBefore(eventContext(moduleAlias, entityAlias, mutationSource, traceId), id, beforeId);
     }
 
@@ -313,28 +367,83 @@ public class DynamicRecordService {
     }
 
     private void moveAfter(String moduleAlias, String entityAlias, String id, String afterId, RuntimeMutationSource mutationSource, String traceId) {
-        entityService(moduleAlias, entityAlias).moveAfter(id, afterId);
+        DataScopeCriteriaResult mutationScope = DataScopeCriteriaResult.unrestricted(Criteria.of());
+        if (requiresStandardSortScopeCheck(mutationSource)) {
+            mutationScope = sortMutationScope(moduleAlias, entityAlias, normalizeRecordIds(Arrays.asList(id, afterId)),
+                    scope -> sortScopeRecordIds(moduleAlias, entityAlias, id, afterId));
+        }
+        withTenantScope(mutationScope, () -> {
+            entityService(moduleAlias, entityAlias).moveAfter(id, afterId);
+            return null;
+        });
         eventPublisher.movedAfter(eventContext(moduleAlias, entityAlias, mutationSource, traceId), id, afterId);
     }
 
-    public List<DynamicRecord> children(String moduleAlias, String entityAlias, String parentId) {
-        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.TREE.code(), Criteria.of());
-        if (!scope.restricted()) {
-            return entityService(moduleAlias, entityAlias).children(parentId);
+    public void moveInTree(String moduleAlias, String entityAlias, String id, String previousId, String nextId, String parentId) {
+        moveInTree(moduleAlias, entityAlias, id, previousId, nextId, parentId, RuntimeMutationSource.BUSINESS, null);
+    }
+
+    private void moveInTree(String moduleAlias,
+                            String entityAlias,
+                            String id,
+                            String previousId,
+                            String nextId,
+                            String parentId,
+                            RuntimeMutationSource mutationSource,
+                            String traceId) {
+        if (mutationSource == RuntimeMutationSource.BUSINESS) {
+            DataScopeCriteriaResult mutationScope = sortMutationScope(moduleAlias, entityAlias,
+                    treeSortExplicitRecordIds(id, previousId, nextId, parentId),
+                    scope -> treeSortScopeRecordIds(moduleAlias, entityAlias, id, previousId, nextId, parentId));
+            withTenantScope(mutationScope, () -> {
+                entityService(moduleAlias, entityAlias).moveInTree(id, previousId, nextId, parentId);
+                return null;
+            });
+        } else {
+            entityService(moduleAlias, entityAlias).moveInTree(id, previousId, nextId, parentId);
         }
-        return entityService(moduleAlias, entityAlias).children(scope.criteria(), parentId);
+        eventPublisher.movedInTree(eventContext(moduleAlias, entityAlias, mutationSource, traceId),
+                id, previousId, nextId, parentId);
+    }
+
+    public List<DynamicRecord> children(String moduleAlias, String entityAlias, String parentId) {
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.TREE, Criteria.of());
+        return withTenantScope(scope, () -> {
+            if (!scope.restricted()) {
+                return entityService(moduleAlias, entityAlias).children(parentId);
+            }
+            return entityService(moduleAlias, entityAlias).children(scope.criteria(), parentId);
+        });
     }
 
     public List<String> ancestorIds(String moduleAlias, String entityAlias, String id) {
-        return entityService(moduleAlias, entityAlias).ancestorIds(id);
+        requireCapability(moduleAlias, entityAlias, EntityCapability.TREE);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.TREE, Criteria.of().eq("id", id));
+        if (!recordVisible(moduleAlias, entityAlias, scope, id)) {
+            return List.of();
+        }
+        List<String> ids = withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).ancestorIds(id));
+        return visibleTreeIds(moduleAlias, entityAlias, ids);
     }
 
     public List<String> ancestorIdsAndSelf(String moduleAlias, String entityAlias, String id) {
-        return entityService(moduleAlias, entityAlias).ancestorIdsAndSelf(id);
+        requireCapability(moduleAlias, entityAlias, EntityCapability.TREE);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.TREE, Criteria.of().eq("id", id));
+        if (!recordVisible(moduleAlias, entityAlias, scope, id)) {
+            return List.of();
+        }
+        List<String> ids = withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).ancestorIdsAndSelf(id));
+        return visibleTreeIds(moduleAlias, entityAlias, ids);
     }
 
     public List<String> descendantIds(String moduleAlias, String entityAlias, String id) {
-        return entityService(moduleAlias, entityAlias).descendantIds(id);
+        requireCapability(moduleAlias, entityAlias, EntityCapability.TREE);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.TREE, Criteria.of().eq("id", id));
+        if (!recordVisible(moduleAlias, entityAlias, scope, id)) {
+            return List.of();
+        }
+        List<String> ids = withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).descendantIds(id));
+        return visibleTreeIds(moduleAlias, entityAlias, ids);
     }
 
     public int enable(String moduleAlias, String entityAlias, String id) {
@@ -346,7 +455,11 @@ public class DynamicRecordService {
     }
 
     private int enable(String moduleAlias, String entityAlias, String id, RuntimeMutationSource mutationSource, String traceId) {
-        int updated = entityService(moduleAlias, entityAlias).enable(id);
+        DataScopeCriteriaResult mutationScope = DataScopeCriteriaResult.unrestricted(Criteria.of());
+        if (mutationSource == RuntimeMutationSource.BUSINESS) {
+            mutationScope = requireBusinessRecordMutation(moduleAlias, entityAlias, PlatformAction.ENABLE, normalizeRecordId(id));
+        }
+        int updated = withTenantScope(mutationScope, () -> entityService(moduleAlias, entityAlias).enable(id));
         if (updated > 0) {
             eventPublisher.enabled(eventContext(moduleAlias, entityAlias, mutationSource, traceId), id);
         }
@@ -362,7 +475,11 @@ public class DynamicRecordService {
     }
 
     private int disable(String moduleAlias, String entityAlias, String id, RuntimeMutationSource mutationSource, String traceId) {
-        int updated = entityService(moduleAlias, entityAlias).disable(id);
+        DataScopeCriteriaResult mutationScope = DataScopeCriteriaResult.unrestricted(Criteria.of());
+        if (mutationSource == RuntimeMutationSource.BUSINESS) {
+            mutationScope = requireBusinessRecordMutation(moduleAlias, entityAlias, PlatformAction.DISABLE, normalizeRecordId(id));
+        }
+        int updated = withTenantScope(mutationScope, () -> entityService(moduleAlias, entityAlias).disable(id));
         if (updated > 0) {
             eventPublisher.disabled(eventContext(moduleAlias, entityAlias, mutationSource, traceId), id);
         }
@@ -370,7 +487,12 @@ public class DynamicRecordService {
     }
 
     public boolean isEnabled(String moduleAlias, String entityAlias, String id) {
-        return entityService(moduleAlias, entityAlias).isEnabled(id);
+        requireCapability(moduleAlias, entityAlias, EntityCapability.ENABLE);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.VIEW, Criteria.of().eq("id", id));
+        if (!recordVisible(moduleAlias, entityAlias, scope, id)) {
+            return false;
+        }
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).isEnabled(id));
     }
 
     public Criteria enabledCriteria(String moduleAlias, String entityAlias, Criteria criteria) {
@@ -382,36 +504,270 @@ public class DynamicRecordService {
     }
 
     public String title(String moduleAlias, String entityAlias, String id) {
-        return entityService(moduleAlias, entityAlias).title(id);
+        requireCapability(moduleAlias, entityAlias, EntityCapability.REFERENCE);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.VIEW, Criteria.of().eq("id", id));
+        if (!recordVisible(moduleAlias, entityAlias, scope, id)) {
+            return null;
+        }
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).title(id));
     }
 
     public Map<String, String> titles(String moduleAlias, String entityAlias, Collection<String> ids) {
-        return entityService(moduleAlias, entityAlias).titles(ids);
+        requireCapability(moduleAlias, entityAlias, EntityCapability.REFERENCE);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.VIEW, idsCriteria(ids));
+        Set<String> visibleIds = visibleRecordIds(moduleAlias, entityAlias, scope, ids);
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).titles(visibleIds));
     }
 
     public Map<String, Map<String, Object>> projections(String moduleAlias,
                                                         String entityAlias,
                                                         Collection<String> ids,
                                                         Collection<String> fieldNames) {
-        return entityService(moduleAlias, entityAlias).projections(ids, fieldNames);
+        requireCapability(moduleAlias, entityAlias, EntityCapability.REFERENCE);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.VIEW, idsCriteria(ids));
+        Set<String> visibleIds = visibleRecordIds(moduleAlias, entityAlias, scope, ids);
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias).projections(visibleIds, fieldNames));
     }
 
     public PageResult<ReferenceOption> referenceOptions(String moduleAlias,
                                                         String entityAlias,
                                                         Criteria criteria,
                                                         PageRequest pageRequest) {
-        return entityService(moduleAlias, entityAlias)
-                .referenceOptions(readScope(moduleAlias, PlatformAction.REFERENCE.code(), criteria).criteria(), pageRequest);
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.REFERENCE, criteria);
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias)
+                .referenceOptions(scope.criteria(), pageRequest));
     }
 
-    private Criteria readScopeCriteria(String moduleAlias, String actionCode, Criteria criteria) {
-        return readScope(moduleAlias, actionCode, criteria).criteria();
+    private DataScopeCriteriaResult readScope(String moduleAlias, PlatformAction action, Criteria criteria) {
+        return readScope(moduleAlias, action.permissionActionCode(), criteria);
     }
 
     private DataScopeCriteriaResult readScope(String moduleAlias, String actionCode, Criteria criteria) {
         return dataScopeCriteriaService.resolveReadScope(moduleAlias, actionCode,
                 criteria == null ? Criteria.of() : criteria,
                 CurrentUserContext.currentUser());
+    }
+
+    private Criteria idsCriteria(Collection<String> ids) {
+        Set<String> normalized = normalizeRecordIds(ids);
+        if (normalized.isEmpty()) {
+            return Criteria.of().raw(net.ximatai.muyun.database.core.orm.SqlRawCondition.of("1 = 0", Map.of()));
+        }
+        return normalized.size() == 1
+                ? Criteria.of().eq("id", normalized.iterator().next())
+                : Criteria.of().in("id", List.copyOf(normalized));
+    }
+
+    private boolean recordVisible(String moduleAlias, String entityAlias, DataScopeCriteriaResult scope, String id) {
+        if (id == null || id.isBlank()) {
+            return false;
+        }
+        return !withTenantScope(scope, () -> entityService(moduleAlias, entityAlias)
+                .list(scope.criteria(), new PageRequest(0, 1))).isEmpty();
+    }
+
+    private Set<String> visibleRecordIds(String moduleAlias,
+                                         String entityAlias,
+                                         DataScopeCriteriaResult scope,
+                                         Collection<String> ids) {
+        Set<String> normalized = normalizeRecordIds(ids);
+        if (normalized.isEmpty()) {
+            return Set.of();
+        }
+        Set<String> loaded = withTenantScope(scope, () -> entityService(moduleAlias, entityAlias)
+                .list(scope.criteria(), new PageRequest(0, normalized.size()))
+                .stream()
+                .map(DynamicRecord::getId)
+                .filter(normalized::contains)
+                .collect(java.util.stream.Collectors.toCollection(LinkedHashSet::new)));
+        LinkedHashSet<String> ordered = new LinkedHashSet<>();
+        normalized.stream()
+                .filter(loaded::contains)
+                .forEach(ordered::add);
+        return ordered;
+    }
+
+    private <R> R withTenantScope(DataScopeCriteriaResult scope, Supplier<R> supplier) {
+        if (scope.crossTenant()) {
+            try (TenantContext.Scope ignored = TenantContext.bypassTenantFilter("data scope allows cross-tenant read")) {
+                return supplier.get();
+            }
+        }
+        return supplier.get();
+    }
+
+    private List<String> visibleTreeIds(String moduleAlias, String entityAlias, Collection<String> ids) {
+        DataScopeCriteriaResult scope = readScope(moduleAlias, PlatformAction.TREE, idsCriteria(ids));
+        return List.copyOf(visibleRecordIds(moduleAlias, entityAlias, scope, ids));
+    }
+
+    private DataScopeCriteriaResult sortMutationScope(String moduleAlias,
+                                                      String entityAlias,
+                                                      Set<String> explicitRecordIds,
+                                                      java.util.function.Function<DataScopeCriteriaResult, Set<String>> scopeCollector) {
+        requireRecordAction(moduleAlias, PlatformAction.SORT, explicitRecordIds);
+        DataScopeCriteriaResult explicitScope = requireRecordDataScope(moduleAlias, entityAlias,
+                PlatformAction.SORT, explicitRecordIds);
+        Set<String> scopedRecordIds = withTenantScope(explicitScope, () -> scopeCollector.apply(explicitScope));
+        return requireRecordDataScope(moduleAlias, entityAlias, PlatformAction.SORT, scopedRecordIds);
+    }
+
+    private Set<String> sortScopeRecordIds(String moduleAlias, String entityAlias, String id, String targetId) {
+        Set<String> recordIds = new LinkedHashSet<>(normalizeRecordIds(Arrays.asList(id, targetId)));
+        DynamicEntityService service = entityService(moduleAlias, entityAlias);
+        DynamicRecord moving = service.select(id);
+        DynamicRecord target = targetId == null || targetId.isBlank() ? null : service.select(targetId);
+        if (moving == null || target == null) {
+            return recordIds;
+        }
+        service.validateSortScope(moving, target);
+        service.sortedList(service.sortScope(moving)).stream()
+                .map(DynamicRecord::getId)
+                .forEach(recordIds::add);
+        return recordIds;
+    }
+
+    private Set<String> treeSortScopeRecordIds(String moduleAlias,
+                                               String entityAlias,
+                                               String id,
+                                               String previousId,
+                                               String nextId,
+                                               String parentId) {
+        Set<String> recordIds = new LinkedHashSet<>(normalizeRecordIds(Arrays.asList(id, previousId, nextId)));
+        DynamicEntityService service = entityService(moduleAlias, entityAlias);
+        DynamicRecord moving = service.select(id);
+        if (moving == null) {
+            return recordIds;
+        }
+        String targetParentId = normalizeTreeParentId(parentId);
+        if (targetParentId == null) {
+            targetParentId = neighborParentId(service, previousId);
+        }
+        if (targetParentId == null) {
+            targetParentId = neighborParentId(service, nextId);
+        }
+        if (targetParentId == null) {
+            targetParentId = normalizeTreeParentId(moving.parentId());
+        }
+        if (targetParentId == null) {
+            targetParentId = TreeAbility.ROOT_ID;
+        }
+        if (!TreeAbility.ROOT_ID.equals(targetParentId)) {
+            recordIds.add(targetParentId);
+        }
+        service.children(targetParentId).stream()
+                .map(DynamicRecord::getId)
+                .forEach(recordIds::add);
+        return recordIds;
+    }
+
+    private String neighborParentId(DynamicEntityService service, String neighborId) {
+        if (neighborId == null || neighborId.isBlank()) {
+            return null;
+        }
+        DynamicRecord neighbor = service.select(neighborId);
+        return neighbor == null ? null : normalizeTreeParentId(neighbor.parentId());
+    }
+
+    private String normalizeTreeParentId(String parentId) {
+        return parentId == null || parentId.isBlank() ? null : parentId;
+    }
+
+    private boolean requiresStandardSortScopeCheck(RuntimeMutationSource mutationSource) {
+        return mutationSource == RuntimeMutationSource.BUSINESS || mutationSource == RuntimeMutationSource.ACTION;
+    }
+
+    private Set<String> treeSortExplicitRecordIds(String id, String previousId, String nextId, String parentId) {
+        LinkedHashSet<String> ids = new LinkedHashSet<>(normalizeRecordIds(Arrays.asList(id, previousId, nextId)));
+        String normalizedParentId = normalizeTreeParentId(parentId);
+        if (normalizedParentId != null && !TreeAbility.ROOT_ID.equals(normalizedParentId)) {
+            ids.add(normalizedParentId);
+        }
+        return java.util.Collections.unmodifiableSet(ids);
+    }
+
+    private DataScopeCriteriaResult requireBusinessRecordMutation(String moduleAlias,
+                                                                  String entityAlias,
+                                                                  PlatformAction action,
+                                                                  Set<String> recordIds) {
+        requireRecordAction(moduleAlias, action, recordIds);
+        return requireRecordDataScope(moduleAlias, entityAlias, action, recordIds);
+    }
+
+    private void requireRecordAction(String moduleAlias, PlatformAction action, Set<String> recordIds) {
+        actionExecutionPolicyService.requireRecordAction(ActionExecutionContext.ofPlatformAction(
+                moduleAlias,
+                action,
+                recordIds,
+                CurrentUserContext.currentUser()
+        ));
+    }
+
+    private DataScopeCriteriaResult requireRecordDataScope(String moduleAlias,
+                                                           String entityAlias,
+                                                           PlatformAction action,
+                                                           Set<String> recordIds) {
+        if (!supportsCapability(moduleAlias, entityAlias, EntityCapability.DATA_SCOPE)) {
+            return DataScopeCriteriaResult.unrestricted(Criteria.of());
+        }
+        Set<String> normalized = normalizeRecordIds(recordIds);
+        if (normalized.isEmpty()) {
+            throw new IllegalArgumentException("record action requires record ids: " + moduleAlias + "." + action.code());
+        }
+        ActionExecutionContext context = ActionExecutionContext.ofPlatformAction(
+                moduleAlias,
+                action,
+                normalized,
+                CurrentUserContext.currentUser()
+        );
+        if (!context.actionPolicy().requiresDataScope()) {
+            return DataScopeCriteriaResult.unrestricted(Criteria.of());
+        }
+        return requireActionRecordDataScope(moduleAlias, entityAlias, context.actionPolicy(), normalized);
+    }
+
+    private DataScopeCriteriaResult requireActionRecordDataScope(String moduleAlias,
+                                                                 String entityAlias,
+                                                                 ActionExecutionPolicy policy,
+                                                                 Collection<String> recordIds) {
+        if (!supportsCapability(moduleAlias, entityAlias, EntityCapability.DATA_SCOPE)) {
+            return DataScopeCriteriaResult.unrestricted(Criteria.of());
+        }
+        Set<String> normalized = normalizeRecordIds(recordIds);
+        if (!policy.requiresDataScope() || normalized.isEmpty()) {
+            return DataScopeCriteriaResult.unrestricted(Criteria.of());
+        }
+        Criteria idCriteria = normalized.size() == 1
+                ? Criteria.of().eq("id", normalized.iterator().next())
+                : Criteria.of().in("id", List.copyOf(normalized));
+        DataScopeCriteriaResult scope = readScope(moduleAlias, policy.permissionActionCode(), idCriteria);
+        long visible = withTenantScope(scope, () -> entityService(moduleAlias, entityAlias)
+                .list(scope.criteria(), new PageRequest(0, normalized.size()))
+                .stream()
+                .map(DynamicRecord::getId)
+                .filter(normalized::contains)
+                .distinct()
+                .count());
+        if (visible != normalized.size()) {
+            throw new PlatformException("record data permission denied: " + moduleAlias + "." + policy.actionCode());
+        }
+        return scope;
+    }
+
+    private Set<String> normalizeRecordIds(Collection<String> ids) {
+        if (ids == null || ids.isEmpty()) {
+            return Set.of();
+        }
+        LinkedHashSet<String> normalized = new LinkedHashSet<>();
+        ids.stream()
+                .filter(id -> id != null && !id.isBlank())
+                .map(String::trim)
+                .forEach(normalized::add);
+        return java.util.Collections.unmodifiableSet(normalized);
+    }
+
+    private Set<String> normalizeRecordId(String id) {
+        return normalizeRecordIds(id == null ? null : java.util.Collections.singletonList(id));
     }
 
     public DynamicReferenceResolveResponse resolveReference(String moduleAlias,
@@ -422,8 +778,9 @@ public class DynamicRecordService {
         DynamicReferenceResolveRequest normalized = request == null
                 ? DynamicReferenceResolveRequest.query(null)
                 : request;
-        Criteria scoped = readScope(reference.targetModuleAlias(), PlatformAction.REFERENCE.code(), normalized.criteria()).criteria();
-        return entityService(moduleAlias, entityAlias).resolveReference(sourceField, normalized.withCriteria(scoped));
+        DataScopeCriteriaResult scope = readScope(reference.targetModuleAlias(), PlatformAction.REFERENCE, normalized.criteria());
+        return withTenantScope(scope, () -> entityService(moduleAlias, entityAlias)
+                .resolveReference(sourceField, normalized.withCriteria(scope.criteria())));
     }
 
     public DynamicReferenceResolveResponse resolveFieldReference(String moduleAlias,
@@ -438,14 +795,18 @@ public class DynamicRecordService {
                                                        DynamicActionDescriptor action,
                                                        DynamicActionExecutionRequest request) {
         DynamicActionExecutionRequest normalized = request == null ? DynamicActionExecutionRequest.empty() : request;
-        actionExecutionPolicyService.requireAuthorized(ActionExecutionContext.ofActionCode(
+        ActionExecutionPolicy policy = actionPolicy(action);
+        actionExecutionPolicyService.requireAuthorized(ActionExecutionContext.ofPolicy(
                 moduleAlias,
-                action.code(),
+                policy,
                 actionRecordIds(normalized),
                 CurrentUserContext.currentUser()
         ));
-        DynamicRecord availabilityRecord = availabilityRecord(moduleAlias, entityAlias, normalized);
-        DynamicActionAvailability availability = actionAvailability(moduleAlias, entityAlias, action.code(), availabilityRecord);
+        DataScopeCriteriaResult actionScope = requireActionRecordDataScope(moduleAlias, entityAlias, policy, actionRecordIds(normalized));
+        DynamicActionAvailability availability = withTenantScope(actionScope, () -> {
+            DynamicRecord availabilityRecord = availabilityRecord(moduleAlias, entityAlias, normalized);
+            return actionAvailability(moduleAlias, entityAlias, action.code(), availabilityRecord);
+        });
         String traceId = UUID.randomUUID().toString();
         DynamicActionExecutionContext context = executionContext(moduleAlias, entityAlias, action, normalized, availability, null, traceId);
         if (!availability.available()) {
@@ -455,14 +816,14 @@ public class DynamicRecordService {
         }
         DynamicActionExecutionResult result;
         try {
-            result = runtime.actionTransactionOperator().executeResult(context, () -> {
+            result = withTenantScope(actionScope, () -> runtime.actionTransactionOperator().executeResult(context, () -> {
                 if (!isInteractionOnlyAction(action)) {
                     validateBeforeActionExecute(moduleAlias, entityAlias, normalized, context);
                 }
-                DynamicActionResultBody body = executeActionValue(moduleAlias, entityAlias, action, normalized, context, traceId);
+                DynamicActionResultBody body = executeActionValue(moduleAlias, entityAlias, action, normalized, context, traceId, policy);
                 DynamicActionExecutionContext completed = executionContext(moduleAlias, entityAlias, action, normalized, availability, body.value(), traceId);
                 return new DynamicActionExecutionResult(completed, body.value(), body);
-            });
+            }));
         } catch (DynamicActionExecutionException e) {
             eventPublisher.actionFailed(context, e.failureStage(), e.getMessage(), failureError(e));
             throw e;
@@ -485,7 +846,46 @@ public class DynamicRecordService {
             collectId(ids, request.record().getId());
         }
         request.ids().forEach(id -> collectId(ids, id));
-        return Set.copyOf(ids);
+        request.orderedIds().forEach(id -> collectId(ids, id));
+        collectId(ids, request.beforeId());
+        collectId(ids, request.afterId());
+        collectId(ids, request.parentId());
+        return java.util.Collections.unmodifiableSet(ids);
+    }
+
+    private ActionExecutionPolicy actionPolicy(DynamicActionDescriptor action) {
+        return new ActionExecutionPolicy(
+                action.code(),
+                toPlatformLevel(action.actionLevel()),
+                toAccessMode(action.accessMode()),
+                action.actionAuth(),
+                action.dataAuth(),
+                ActionDefaultPolicy.NONE,
+                action.authInheritActionCode()
+        );
+    }
+
+    private PlatformActionLevel toPlatformLevel(net.ximatai.muyun.spring.dynamic.metadata.EntityActionLevel level) {
+        if (level == null) {
+            return PlatformActionLevel.DEFAULT;
+        }
+        return switch (level) {
+            case LIST -> PlatformActionLevel.LIST;
+            case RECORD -> PlatformActionLevel.RECORD;
+            case BATCH -> PlatformActionLevel.BATCH;
+            case ANY -> PlatformActionLevel.ANY;
+        };
+    }
+
+    private ActionAccessMode toAccessMode(net.ximatai.muyun.spring.dynamic.metadata.EntityActionAccessMode accessMode) {
+        if (accessMode == null) {
+            return ActionAccessMode.AUTH_REQUIRED;
+        }
+        return switch (accessMode) {
+            case AUTH_REQUIRED -> ActionAccessMode.AUTH_REQUIRED;
+            case LOGIN_REQUIRED -> ActionAccessMode.LOGIN_REQUIRED;
+            case ANONYMOUS_ALLOWED -> ActionAccessMode.ANONYMOUS_ALLOWED;
+        };
     }
 
     private void collectId(Set<String> ids, String id) {
@@ -551,7 +951,8 @@ public class DynamicRecordService {
                                                        DynamicActionDescriptor action,
                                                        DynamicActionExecutionRequest request,
                                                        DynamicActionExecutionContext context,
-                                                       String traceId) {
+                                                       String traceId,
+                                                       ActionExecutionPolicy policy) {
         if (action.executorType() == EntityActionExecutorType.STANDARD) {
             return new DynamicStandardActionExecutor(this, moduleAlias, entityAlias, traceId)
                     .execute(action.code(), request);
@@ -565,7 +966,7 @@ public class DynamicRecordService {
             }
             try {
                 return actionResultBody(executor.execute(context, request,
-                        actionOperations(moduleAlias, entityAlias, traceId)));
+                        actionOperations(moduleAlias, entityAlias, traceId, policy)));
             } catch (DynamicActionExecutionException e) {
                 throw e;
             } catch (RuntimeException e) {
@@ -596,7 +997,10 @@ public class DynamicRecordService {
         return DynamicActionResultBody.of(value);
     }
 
-    private DynamicActionOperations actionOperations(String moduleAlias, String entityAlias, String traceId) {
+    private DynamicActionOperations actionOperations(String moduleAlias,
+                                                     String entityAlias,
+                                                     String traceId,
+                                                     ActionExecutionPolicy policy) {
         return new DynamicActionOperations() {
             @Override
             public DynamicRecord newRecord() {
@@ -610,14 +1014,17 @@ public class DynamicRecordService {
 
             @Override
             public int update(DynamicRecord record) {
-                return DynamicRecordService.this.update(moduleAlias, entityAlias, record,
-                        RuntimeMutationSource.ACTION, traceId);
+                DataScopeCriteriaResult scope = requireActionRecordDataScope(moduleAlias, entityAlias, policy,
+                        normalizeRecordId(record == null ? null : record.getId()));
+                return withTenantScope(scope, () -> DynamicRecordService.this.update(moduleAlias, entityAlias, record,
+                        RuntimeMutationSource.ACTION, traceId));
             }
 
             @Override
             public int delete(String id) {
-                return DynamicRecordService.this.delete(moduleAlias, entityAlias, id,
-                        RuntimeMutationSource.ACTION, traceId);
+                DataScopeCriteriaResult scope = requireActionRecordDataScope(moduleAlias, entityAlias, policy, normalizeRecordId(id));
+                return withTenantScope(scope, () -> DynamicRecordService.this.delete(moduleAlias, entityAlias, id,
+                        RuntimeMutationSource.ACTION, traceId));
             }
         };
     }
@@ -665,6 +1072,7 @@ public class DynamicRecordService {
                 traceId,
                 TenantContext.currentTenantId().orElse(null),
                 TenantContext.isSystem(),
+                TenantContext.systemReason().orElse(null),
                 availability
         );
     }
@@ -684,6 +1092,16 @@ public class DynamicRecordService {
         return exception.getCause() == null ? exception : exception.getCause();
     }
 
+    private boolean supportsCapability(String moduleAlias, String entityAlias, EntityCapability capability) {
+        return findEntity(describe(moduleAlias), entityAlias).capabilities().contains(capability.name());
+    }
+
+    private void requireCapability(String moduleAlias, String entityAlias, EntityCapability capability) {
+        if (!supportsCapability(moduleAlias, entityAlias, capability)) {
+            throw new PlatformException("dynamic entity does not support capability: " + capability);
+        }
+    }
+
     private DynamicRecordEventPublisher.DynamicRecordEventContext eventContext(String moduleAlias,
                                                                                String entityAlias,
                                                                                RuntimeMutationSource mutationSource,
@@ -694,6 +1112,7 @@ public class DynamicRecordService {
                 traceId,
                 TenantContext.currentTenantId().orElse(null),
                 TenantContext.isSystem(),
+                TenantContext.systemReason().orElse(null),
                 mutationSource
         );
     }
